--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>login</title>
+    <title>index</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">index</div>
 </body>
 </html>
